--- a/chrome/locale/en-US/overlay.dtd
+++ b/chrome/locale/en-US/overlay.dtd
@@ -1,8 +1,8 @@
 <!ENTITY googly.label "Your localized menuitem">
 <!ENTITY googlyContext.label "Your Menuitem">
 <!ENTITY googlyContext.accesskey "Y">
-<!ENTITY googlyToolbarButton.label "Your Toolbar Button">
-<!ENTITY googlyToolbarButton.tooltip "This is your toolbar button!">
+<!ENTITY googlyToolbarButton.label "googly">
+<!ENTITY googlyToolbarButton.tooltip "Shorten URL using goo.gl">
 <!ENTITY googlySidebar.label "Your Sidebar">
 <!ENTITY googlyToolbar.name  "example">
 <!ENTITY googlyToolbar.label "This is an example toolbar. You can hide it under View &gt; toolbars &gt; &googlyToolbar.name;">
